[package]
name = "Shin-Z0"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
crossterm = "0.27"
ratatui = "0.27"  # <--- Измени 0.26 на 0.27
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }